--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -1,7 +1,7 @@
 {% extends 'base_layout.html' %}
 {% block nav-about %} menu-active {% endblock %} 
 {% load static %} 
-{% block title %}{{ block.super}} Customer oriented energy specialists{% endblock %} 
+{% block title %}{{ block.super}} solar energy professionals{% endblock %} 
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
