--- a/greensource_pages/templates/greensource_pages/commercial-solar.html
+++ b/greensource_pages/templates/greensource_pages/commercial-solar.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} commercial solar solution{% endblock %}
+{% block title %}{{ block.super }} commercial solar{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
