--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Upgrade your existing solar systems{% endblock %}
+{% block title %}{{ block.super }} solar energy system upgrade {% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
