--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -380,10 +380,10 @@ menu-active
                     <hr />
                 </div>
         <div class="pricing-table owl-carousel owl-theme" id="pricing">
-            <div class="">
-                <div class="item">
+            
+            <div class="item">
                 <div class="table">
-                    <h2>mini-kit</h2>
+                    <h6>mini-kit</h6>
                     <div class="prices">
                         N176, 000
                         <span>
@@ -396,7 +396,7 @@ menu-active
                             <strong>30amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> Mini TV</li>
                         <li>
@@ -408,11 +408,11 @@ menu-active
                     </ul>
                 </div>
             </div>
-            </div>
-            <div class="">
-                <div class="item">
+            
+            
+            <div class="item">
                 <div class="table">
-                    <h2>mini-kit 2</h2>
+                    <h6>mini-kit +</h6>
                     <div class="prices">
                         N242, 000
                         <span>
@@ -425,7 +425,7 @@ menu-active
                             <strong>30amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -437,11 +437,10 @@ menu-active
                     </ul>
                 </div>
             </div>
-            </div>
-            <div class="">
-                <div class="item">
+           
+            <div class="item">
                 <div class="table">
-                    <h2>regular</h2>
+                    <h6>regular</h6>
                     <div class="prices">
                         N368,500
                         <span>
@@ -454,7 +453,7 @@ menu-active
                             <strong>50amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -465,12 +464,12 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                <div class="item">
+           
+            
+            <div class="item">
                 <div class="table">
-                    <h2>regular 2</h2>
+                    <h6>regular +</h6>
                     <div class="prices">
                         N480, 500
                         <span>
@@ -483,7 +482,7 @@ menu-active
                             <strong>50amp</strong> controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -494,12 +493,11 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+           
+            <div class="item">
                 <div class="table">
-                    <h2>standard</h2>
+                    <h6>standard</h6>
                     <div class="prices">
                         N646, 500
                         <span>
@@ -512,7 +510,7 @@ menu-active
                             <strong>50amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV</li>
                         <li>
@@ -523,12 +521,11 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+          
+            <div class="item">
                 <div class="table">
-                    <h2>standard 2</h2>
+                    <h6>standard +</h6>
                     <div class="prices">
                         N735, 300
                         <span>
@@ -541,7 +538,7 @@ menu-active
                             <strong>60amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
                             <strong>5</strong> Fans</li>
@@ -554,12 +551,11 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>compact</h2>
+                    <h6>compact</h6>
                     <div class="prices">
                         N975, 450
                         <span>
@@ -572,7 +568,7 @@ menu-active
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
                             <strong>6</strong> Fans</li>
@@ -584,12 +580,11 @@ menu-active
                         <li>
                             <strong>1</strong> Decoder/Home theater</li>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>compact 2</h2>
+                    <h6>compact +</h6>
                     <div class="prices">
                         N1, 335, 000
                         <span>
@@ -602,7 +597,7 @@ menu-active
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>5</strong> Fans</li>
@@ -615,16 +610,15 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>advance</h2>
+                    <h6>advance</h6>
                     <div class="prices">
-                        N1, 795, 000
+                        N2, 000, 000
                         <span>
-                            <strong>2.5kw</strong> Module
+                            <strong>3kw</strong> Module
                             <br />
                             <strong>3.5kw</strong> Inverter
                             <br />
@@ -633,7 +627,7 @@ menu-active
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>4</strong> Fans</li>
@@ -647,25 +641,24 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>advance 2</h2>
+                    <h6>advance +</h6>
                     <div class="prices">
-                        N2, 780, 500
+                        N2, 980, 500
                         <span>
-                            <strong>3.5kw</strong> Module
+                            <strong>5kw</strong> Module
                             <br />
-                            <strong>3.5kw</strong> Inverter
+                            <strong>5kw</strong> Inverter
                             <br />
-                            <strong>1000ah</strong> Battery
+                            <strong>800ah</strong> Battery
                             <br />
                             <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>6</strong> Fans</li>
@@ -680,25 +673,24 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>premium</h2>
+                    <h6>premium</h6>
                     <div class="prices">
-                        N3, 250, 300
+                        N3, 480, 500
                         <span>
-                            <strong>5kw</strong> Module
+                            <strong>6kw</strong> Module
                             <br />
                             <strong>3.5kw</strong> Inveter
                             <br />
-                            <strong>1200ah</strong> Battery
+                            <strong>1000ah</strong> Battery
                             <br />
                             <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>8</strong> Fans</li>
@@ -713,25 +705,24 @@ menu-active
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
                 </div>
-                </div>
             </div>
-            <div class="">
-                    <div class="item">
+
+            <div class="item">
                 <div class="table">
-                    <h2>premium 2</h2>
+                    <h6>premium +</h6>
                     <div class="prices">
-                        N3, 800, 000
+                        N4, 000, 000
                         <span>
-                            <strong>7kw</strong> Module
+                            <strong>8kw</strong> Module
                             <br />
                             <strong>5kw</strong> Inverter
                             <br />
-                            <strong>1500ah</strong> Battery
+                            <strong>1200ah</strong> Battery
                             <br />
                             <strong>120amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>8</strong> Fans</li>
@@ -745,7 +736,6 @@ menu-active
                         <li>
                             <strong>1</strong> Decoder/Home theater</li>
                     </ul>
-                </div>
                 </div>
             </div>
         </div>
