--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -1,6 +1,6 @@
 {% extends 'base_layout.html' %}
 {% load static %}
-{% block title %}{{ block.super }} Solar system prices{% endblock %}
+{% block title %}{{ block.super }} Solar energy pricing{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
@@ -27,7 +27,7 @@
         <div class="pricing-table">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>mini-kit</h2>
+                    <h6>mini-kit</h6>
                     <div class="prices">
                         N176, 000
                         <span>
@@ -40,7 +40,7 @@
                             <strong>30amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> Mini TV</li>
                         <li>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>mini-kit +</h2>
+                    <h6>mini-kit +</h6>
                     <div class="prices">
                         N242, 000
                         <span>
@@ -67,7 +67,7 @@
                             <strong>30amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>regular</h2>
+                    <h6>regular</h6>
                     <div class="prices">
                         N368,500
                         <span>
@@ -94,7 +94,7 @@
                             <strong>50amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>regular +</h2>
+                    <h6>regular +</h6>
                     <div class="prices">
                         N480, 500
                         <span>
@@ -121,7 +121,7 @@
                             <strong>50amp</strong> controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>1</strong> TV</li>
                         <li>
@@ -135,7 +135,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>standard</h2>
+                    <h6>standard</h6>
                     <div class="prices">
                         N646, 500
                         <span>
@@ -148,7 +148,7 @@
                             <strong>50amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV</li>
                         <li>
@@ -162,7 +162,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>standard +</h2>
+                    <h6>standard +</h6>
                     <div class="prices">
                         N735, 300
                         <span>
@@ -175,7 +175,7 @@
                             <strong>60amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
                             <strong>5</strong> Fans</li>
@@ -191,7 +191,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>compact</h2>
+                    <h6>compact</h6>
                     <div class="prices">
                         N975, 450
                         <span>
@@ -204,7 +204,7 @@
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>2</strong> TV &nbsp;
                             <strong>6</strong> Fans</li>
@@ -219,7 +219,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>compact +</h2>
+                    <h6>compact +</h6>
                     <div class="prices">
                         N1, 335, 000
                         <span>
@@ -232,7 +232,7 @@
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>5</strong> Fans</li>
@@ -248,7 +248,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>advance</h2>
+                    <h6>advance</h6>
                     <div class="prices">
                         N2, 000, 000
                         <span>
@@ -261,7 +261,7 @@
                             <strong>80amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>4</strong> Fans</li>
@@ -279,7 +279,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>advance +</h2>
+                    <h6>advance +</h6>
                     <div class="prices">
                         N2, 980, 500
                         <span>
@@ -292,7 +292,7 @@
                             <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>6</strong> Fans</li>
@@ -310,7 +310,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>premium</h2>
+                    <h6>premium</h6>
                     <div class="prices">
                         N3, 480, 500
                         <span>
@@ -323,7 +323,7 @@
                             <strong>100amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>8</strong> Fans</li>
@@ -341,7 +341,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="table">
-                    <h2>premium +</h2>
+                    <h6>premium +</h6>
                     <div class="prices">
                         N4, 000, 000
                         <span>
@@ -354,7 +354,7 @@
                             <strong>120amp</strong> Controller</span>
                     </div>
                     <ul>
-                        <h4>load capacity</h4>
+                        <p>load capacity</p>
                         <li>
                             <strong>3</strong> TV &nbsp;
                             <strong>8</strong> Fans</li>
