--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Energy Management{% endblock %}
+{% block title %}{{ block.super }}solar energy management{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
