--- a/greensource_pages/templates/greensource_pages/solar-water-pump.html
+++ b/greensource_pages/templates/greensource_pages/solar-water-pump.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Solar pump solution{% endblock %}
+{% block title %}{{ block.super }} Solar water pump {% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
