--- a/news/templates/article_category.html
+++ b/news/templates/article_category.html
@@ -28,7 +28,7 @@ menu-active
                 {% if cat_posts %}
                 {% for post in cat_posts %}
                 <div class="cad col-lg-5 col-md-6">
-                    <img src="{{post.thumb.url}}" class="card-img-top" alt="blog image" />
+                    <amp-img src="{{post.thumb.url}}" class="card-img-top" alt="blog image" /></amp-img>
                     <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                     <div class="card-body">
                         <small class="text-muted"><i class="fas fa-user"></i> Admin &nbsp; &nbsp;<i class="far fa-comments"></i>{{ post.comments.count }}</small>
