--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -64,7 +64,7 @@ menu-active
                 <div class="card card-white post">
                     <div class="post-heading">
                         <div class="float-left image">
-                            <img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" />
+                            <amp-img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" /></amp-img>
                         </div>
                         <div class="float-left meta">
                             <div class="title h5">
