--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -2,15 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179025578-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-179025578-1');
-</script>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="audience" content="all" />
     <meta name="robots" content="index, follow" />
@@ -35,21 +27,7 @@
     energy solutions for residential, large and small businesses..." />
     <title>{% block title %}Greensource Energy -{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'home.css' %}" %} type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <script>
-        var test = document.createElement("div")
-        test.className = "hidden d-none"
-        document.head.appendChild(test)
-        var cssLoaded = window.getComputedStyle(test).display === "none"
-        document.head.removeChild(test)
-        if (!cssLoaded) {
-            var link = document.createElement("link");
-            link.type = "text/css";
-            link.rel = "stylesheet";
-            link.href = "{% static 'bootstrap-4.3.1-dist/css/bootstrap.min.css' %}";
-            document.head.appendChild(link);
-        }
-    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/regular.min.css" rel="stylesheet" />
@@ -67,65 +45,17 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&display=swap" rel="stylesheet" />
-     <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '680910845861426');
-    fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"/></noscript>
-    <!-- <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Energy Company",
-          "image": [
-          "https://greensourcenergy.com/static/images/about-us.jpg"
-          "https://greensourcenergy.com/static/images/greensourcelogo-3.png"
-          "https://greensourcenergy.com/static/images/maintenance.jpg"
-          ]
-          "name": "GREENSOURCE ENERGY",
-          "url": "greensourcenergy.com",
-          "address": {
-            "@type": "ContactPoint",
-            "streetAddress": "1, heritage st by anobi noah, arogun",
-            "addressLocality": "Mowe - Ofada"
-            "addressRegion": "Ogun"
-            "addressCountry": "Nigeria"
-            "telephone": "+2348029442697",
-            "contactType": "professional service"
-          }
-        }
-    </script> -->
-    <script>
-        (function () {
-        var options = {
-        whatsapp: "+2348029442697",
-        call_to_action: "Live Chat", 
-        position: "left", 
-        };
-        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
-        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-        })();
-    </script>  
+    <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&display=swap" rel="stylesheet" /> 
     <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
-    <script src="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.js" defer></script>
-    <script>window.addEventListener("load", function () { window.wpcc.init({ "border": "normal", "corners": "small", "colors": { "popup": { "background": "#222222", "text": "#ffffff", "border": "#192712" }, "button": { "background": "#b5e1a0", "text": "#000000" } }, "position": "bottom-right", "content": { "href": "https://www.greensourcenergy.com/privacy/" } }) });</script>
+    <link rel="canonical" href="https://greensourcenergy.com/news/">
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
 <body>
     <div class="review container-fluid padding">
         <div class="row">
             <div class="time col-xs-12 col-lg-3 col-md-6">
                 <p>
-                    <i class="far fa-clock"></i>Mon - Fri 9.00am - 6.00pm</p>
+                    <i class="far fa-clock"></i>Mon - Fri 9.00am - 5.00pm</p>
             </div>
             <div class="time col-xs-12 col-lg-2 col-md-6">
                 <p>
@@ -322,11 +252,11 @@
             </div>
         </div>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
+    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     <script>window.jQuery || document.write('<script src="/static/js/jquery-3.3.1.min.js"><\/script>')</script></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/js/popper.min.js"><\/script>')</script></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script async src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script>if(typeof($.fn.modal) === 'undefined') {document.write('<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"><\/script>')}</script>
     <script src="{% static 'js/jquery-migrate.min.js' %}"></script>
     <script src="{% static 'js/main.js'%}"></script>
@@ -337,6 +267,74 @@
     <script src="{% static 'src/hoverIntent.min.js' %}"></script>
     <script src="{% static 'src/superfish.min.js' %}"></script>
     <script src="{% static 'src/simple-lightbox.min.js' %}"></script>
-</body>
+    <script src="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.js" defer></script>
+    <script>window.addEventListener("load", function () { window.wpcc.init({ "border": "normal", "corners": "small", "colors": { "popup": { "background": "#222222", "text": "#ffffff", "border": "#192712" }, "button": { "background": "#b5e1a0", "text": "#000000" } }, "position": "bottom-left", "content": { "href": "https://www.greensourcenergy.com/privacy/" } }) });</script>
+    <script>
+        var test = document.createElement("div")
+        test.className = "hidden d-none"
+        document.head.appendChild(test)
+        var cssLoaded = window.getComputedStyle(test).display === "none"
+        document.head.removeChild(test)
+        if (!cssLoaded) {
+            var link = document.createElement("link");
+            link.type = "text/css";
+            link.rel = "stylesheet";
+            link.href = "{% static 'bootstrap-4.3.1-dist/css/bootstrap.min.css' %}";
+            document.head.appendChild(link);
+        }
+    </script>
+    <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '680910845861426');
+            fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"/></noscript>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179025578-1"></script> -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-179025578-1');
+    </script>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+              "@type": "ProfessionalService",
+              "name": "Greensource Energy Consult",
+              "image": "https://greensourcenergy.com/static/images/image/about-us.jpg",
+              "@id": "",
+              "url": "https://www.greensourcenergy.com",
+              "telephone": "(234)802 9442 697",
+              "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "1 heritage street btanobi noah, arogun",
+                "addressLocality": "mowe-ofada",
+                "addressRegion":"OG"
+                "postalCode": "110115",
+                "addressCountry": "NG"  
+            }  
+        }
+    </script>          
+    <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+        (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/60599a8f067c2605c0bb4404/1f1f07ha0';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+        })();
+    </script>
+    </body>
 </html>
 
