--- a/greensource_pages/templates/greensource_pages/design-plans.html
+++ b/greensource_pages/templates/greensource_pages/design-plans.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} shop{% endblock %}
+{% block title %}{{ block.super }}Solar/PV system shop{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
