--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -3,7 +3,7 @@
 menu-active
 {% endblock %}
 {% load static %}
-{% block title %}{{ block.super }} Solar Energy Storage-Backup{% endblock %}
+{% block title %}{{ block.super }} Solar Energy Storage{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
