--- a/greensource_pages/templates/greensource_pages/solar-design.html
+++ b/greensource_pages/templates/greensource_pages/solar-design.html
@@ -3,7 +3,7 @@
 menu-active 
 {% endblock %} 
 {% load static %} 
-{% block title %}{{block.super }} Design & installation of solar panels{% endblock %} 
+{% block title %}{{block.super }}residential solar{% endblock %} 
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
